Frontend Dockerfile and Compose adjustments.

--- a/apps/frontend/Dockerfile.dev
+++ b/apps/frontend/Dockerfile.dev
@@ -2,8 +2,10 @@ FROM node:lts-bookworm-slim
 
 WORKDIR /apps/frontend
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 
 RUN npm install
+
+COPY . .
 
 CMD ["npm", "run", "dev"]
