--- a/compose.yaml
+++ b/compose.yaml
@@ -44,12 +44,13 @@ services:
       - backend
     volumes:
       - "./apps/frontend:/apps/frontend"
+      - "/apps/frontend/node_modules"
     env_file:
       - ".env"
     networks:
       - frontend
   mailhog:
-    image: mailhog/mailhog:latest
+    image: mailhog/mailhog:v1.0.1
     ports:
       - "1025:1025"
       - "8025:8025"
